--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,12 @@ target/
 .idea/jarRepositories.xml
 .idea/compiler.xml
 .idea/libraries/
+.idea/**
 *.iws
 *.iml
 *.ipr
+
+effective-pom.xml
 
 ### Eclipse ###
 .apt_generated
