--- a/spring-boot-starter-codex/pom.xml
+++ b/spring-boot-starter-codex/pom.xml
@@ -20,14 +20,14 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-            <version>2.3.5.RELEASE</version>
-        </dependency>
-        <dependency>
             <groupId>priv.ray.protocal</groupId>
             <artifactId>codex-core</artifactId>
             <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+            <version>2.3.5.RELEASE</version>
         </dependency>
     </dependencies>
 
